@@ -7,15 +7,16 @@
 
 #include "q_stdinc.h"
 #include "arch_def.h"
+#if defined(PLATFORM_UNIX) ||		\
+    defined(PLATFORM_AMIGA) ||		\
+    defined(__DJGPP__)
+#include <sys/time.h>	/* struct timeval */
+#endif
 #include "net_sys.h"
 #include "quakedef.h"
 #include "huffman.h"
 
 //=============================================================================
-
-//
-// net driver vars
-//
 
 int LastCompMessageSize = 0;
 
@@ -26,6 +27,9 @@ sizebuf_t	net_message;
 
 static sys_socket_t	net_socket = INVALID_SOCKET;
 
+#if defined(PLATFORM_AMIGA)
+struct Library	*SocketBase;
+#endif
 #ifdef PLATFORM_WINDOWS
 #include "wsaerror.h"
 static WSADATA	winsockdata;
@@ -36,10 +40,6 @@ static byte	net_message_buffer[MAX_UDP_PACKET];
 
 
 //=============================================================================
-
-//
-// net driver functions
-//
 
 static void NetadrToSockadr (netadr_t *a, struct sockaddr_in *s)
 {
@@ -246,7 +246,7 @@ int NET_CheckReadTimeout (long sec, long usec)
 	timeout.tv_sec = sec;
 	timeout.tv_usec = usec;
 
-	return select(net_socket + 1, &readfds, NULL, NULL, &timeout);
+	return selectsocket(net_socket + 1, &readfds, NULL, NULL, &timeout);
 }
 
 //=============================================================================
@@ -348,6 +348,11 @@ void NET_Init (int port)
 	if (err != 0)
 		Sys_Error ("Winsock initialization failed (%s)", socketerror(err));
 #endif
+#ifdef PLATFORM_AMIGA
+	SocketBase = OpenLibrary("bsdsocket.library", 0);
+	if (!SocketBase)
+		Sys_Error ("Can't open bsdsocket.library.");
+#endif
 #ifdef PLATFORM_DOS	/* WatTCP */
 	int i, err;
 
@@ -361,19 +366,13 @@ void NET_Init (int port)
 		Sys_Error ("WATTCP initialization failed (%s)", sock_init_err(err));
 #endif	/* WatTCP  */
 
-	//
 	// open the single socket to be used for all communications
-	//
 	net_socket = UDP_OpenSocket (port);
 
-	//
 	// init the message buffer
-	//
 	SZ_Init (&net_message, net_message_buffer, sizeof(net_message_buffer));
 
-	//
 	// determine my name & address
-	//
 	NET_GetLocalAddress ();
 
 	memset (&net_loopback_adr, 0, sizeof(netadr_t));
@@ -396,6 +395,13 @@ void	NET_Shutdown (void)
 	}
 #ifdef PLATFORM_WINDOWS
 	WSACleanup ();
+#endif
+#ifdef PLATFORM_AMIGA
+	if (SocketBase)
+	{
+		CloseLibrary(SocketBase);
+		SocketBase = NULL;
+	}
 #endif
 }
 
